mType/tests/testFiles/import/pass/deep/nested/path/DeepModule.mt
class DeepClass {
    public function getDepth(): int {
        return 3;
    }
}
