mType/tests/testFiles/import/error/modules/SameName2.mt
class SameName {
    fun getSource(): Int {
        return 2;
    }
}
